testsuite/tests/properties/invalid_array_lit/single_ok.lkt
import common

class Example: FooNode {
    @export fun p(): Array[Bool] = [true]
}
